<resources>
    <string name="app_name">StudentHelp</string>
    <string name="auth_login_template">Login</string>
    <string name = "auth_password_template">Password</string>
    <string name="item_home">Home</string>
    <string name="item_timetable">Timetable</string>
    <string name="item_teachers">Teachers</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_subject">Subject</string>
    <string name="button_add">Add</string>
</resources>
