<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_edit_height"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/top_margin"
            android:inputType="text"
            android:hint="@string/hint_name"/>

        <EditText
            android:id="@+id/edit_text_subject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_edit_height"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/top_margin"
            android:inputType="text"
            android:hint="@string/hint_subject"/>

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_edit_height"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/top_margin"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"/>

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_edit_height"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/top_margin"
            android:inputType="phone"
            android:hint="@string/hint_phone"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@color/colorPrimary"
        android:text="@string/button_add"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>